--- a/assets/styles/blocks/header/header.css
+++ b/assets/styles/blocks/header/header.css
@@ -1,5 +1,14 @@
 .header {
+    margin-bottom: 48px;
+    padding-top: 28px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+@media (min-width: 768px) {
+    .header {
+        padding-top: 28px;
+        align-items: flex-end;
+    }
 }
