--- a/assets/styles/blocks/lead/lead-imports.css
+++ b/assets/styles/blocks/lead/lead-imports.css
@@ -1,4 +1,5 @@
 @import "lead.css";
+@import "__bg-image/lead__bg-image.css";
 @import "__title/lead__title.css";
 @import "__subtitle/lead__subtitle.css";
 @import "__image/lead__image.css";
