--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,6 +1,8 @@
 @import "normalize.css";
 @import "common/common.css";
 @import "blocks/container/container-imports.css";
+@import "blocks/list/list-imports.css";
+@import "blocks/image/image-imports.css";
 @import "blocks/header/header-imports.css";
 @import "blocks/intro/intro-imports.css";
 @import "blocks/lead/lead-imports.css";
