--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,15 +1,18 @@
 @import "normalize.css";
 @import "common/common.css";
-@import "blocks/container/container-imports.css";
-@import "blocks/list/list-imports.css";
-@import "blocks/image/image-imports.css";
-@import "blocks/header/header-imports.css";
-@import "blocks/intro/intro-imports.css";
-@import "blocks/lead/lead-imports.css";
-@import "blocks/cover/cover-imports.css";
-@import "blocks/footer/footer-imports.css";
-@import "blocks/page/page-imports.css";
-@import "blocks/photo-grid/photo-grid-imports.css";
-@import "blocks/place/place-imports.css";
-@import "blocks/website/website-imports.css";
+@import "blocks/container/container.css";
+@import "blocks/container-fluid/container-fluid.css";
+@import "blocks/content/content.css";
+@import "blocks/content-holder/content-holder.css";
+@import "blocks/list/list.css";
+@import "blocks/image/image.css";
+@import "blocks/header/header.css";
+@import "blocks/intro/intro.css";
+@import "blocks/lead/lead.css";
+@import "blocks/cover/cover.css";
+@import "blocks/footer/footer.css";
+@import "blocks/page/page.css";
+@import "blocks/photo-grid/photo-grid.css";
+@import "blocks/place/place.css";
+@import "blocks/website/website.css";
 
