--- a/assets/styles/blocks/container/container.css
+++ b/assets/styles/blocks/container/container.css
@@ -15,6 +15,8 @@
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
+        padding-left: 24px;
+        padding-right: 24px;
     }
 }
 
