--- a/assets/styles/blocks/header/header.css
+++ b/assets/styles/blocks/header/header.css
@@ -1,5 +1,10 @@
+@import "__logo/header__logo.css";
+@import "__lang-link/header__lang-link.css";
+@import "__lang-link/_active/header__lang-link_active.css";
+@import "__list/header__list.css";
+
+
 .header {
-    margin-bottom: 48px;
     padding-top: 28px;
     display: flex;
     justify-content: space-between;
@@ -8,7 +13,6 @@
 
 @media (min-width: 768px) {
     .header {
-        padding-top: 28px;
         align-items: flex-end;
     }
 }
