--- a/assets/styles/blocks/lead/__caption/lead__caption.css
+++ b/assets/styles/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,6 @@
 .lead__caption {
     margin-top: 5px;
+    margin-bottom: 0;
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 1.15px;
@@ -8,6 +9,7 @@
 
 @media (min-width: 1024px) {
     .lead__caption {
-        padding: 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
