--- a/assets/styles/blocks/lead/lead.css
+++ b/assets/styles/blocks/lead/lead.css
@@ -1,12 +1,9 @@
-@media (min-width: 1024px) {
-    .lead {
-        margin: 0 auto;
-        max-width: 928px;
-    }
-}
+@import "__bg-image/lead__bg-image.css";
+@import "__title/lead__title.css";
+@import "__subtitle/lead__subtitle.css";
+@import "__image/lead__image.css";
+@import "__caption/lead__caption.css";
 
-@media (min-width: 1280px) {
-    .lead {
-        max-width: 984px;
-    }
+.lead {
+    padding-top: 48px;
 }
