--- a/assets/styles/blocks/container/container.css
+++ b/assets/styles/blocks/container/container.css
@@ -14,7 +14,7 @@
 
 @media (min-width: 768px) {
     .container {
-        max-width: 720px;
+        max-width: 768px;
         padding-left: 24px;
         padding-right: 24px;
     }
@@ -22,12 +22,14 @@
 
 @media (min-width: 1024px) {
     .container {
-        max-width: 928px;
+        max-width: 1024px;
+        padding-left: 48px;
+        padding-right: 48px;
     }
 }
 
 @media (min-width: 1280px) {
     .container {
-        max-width: 1184px;
+        max-width: 1280px;
     }
 }
