--- a/assets/styles/blocks/intro/intro.css
+++ b/assets/styles/blocks/intro/intro.css
@@ -9,3 +9,15 @@
 .intro {
     padding-top: 64px;
 }
+
+@media (min-width: 768px) {
+    .intro {
+        padding-top: 88px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .intro {
+        padding-top: 92px;
+    }
+}
