--- a/assets/styles/blocks/photo-grid/photo-grid.css
+++ b/assets/styles/blocks/photo-grid/photo-grid.css
@@ -1,1 +1,18 @@
+@import "__list/photo-grid__list.css";
 @import "__item/photo-grid__item.css";
+
+.photo-grid {
+    padding-top: 64px;
+}
+
+@media (min-width: 768px) {
+    .photo-grid {
+        padding-top: 88px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .photo-grid {
+        padding-top: 92px;
+    }
+}
