--- a/assets/styles/blocks/place/place.css
+++ b/assets/styles/blocks/place/place.css
@@ -1,4 +1,27 @@
 @import "__title/place__title.css";
 @import "__website/place__website.css";
+@import "__url-heading/place__url-heading.css";
+@import "__link/place__link.css";
+@import "__inner/place__inner.css";
 @import "__image/place__image.css";
 @import "__paragraph/place__paragraph.css";
+
+.place {
+    max-width: 100%;
+    display: grid;
+    row-gap: 32px;
+}
+
+@media (min-width: 768px) {
+    .place {
+        grid-template-columns: 47% 1fr;
+        column-gap: 28px;
+        row-gap: 48px;
+    }
+}
+
+@media (min-width: 768px) {
+    .place {
+        column-gap: 32px;
+    }
+}
