--- a/assets/styles/blocks/cover/cover.css
+++ b/assets/styles/blocks/cover/cover.css
@@ -1,4 +1,6 @@
+@import "__background/cover__background.css";
+@import "__overlay/cover__overlay.css";
+@import "__link/cover__link.css";
+@import "__inner/cover__inner.css";
 @import "__title/cover__title.css";
 @import "__subtitle/cover__subtitle.css";
-@import "__overlay/cover__overlay.css";
-@import "__background/cover__background.css";
