--- a/assets/styles/blocks/header/__lang-link/_active/header__lang-link_active.css
+++ b/assets/styles/blocks/header/__lang-link/_active/header__lang-link_active.css
@@ -1,14 +1,3 @@
 .header__lang-link_active {
-    position: relative;
-}
-
-.header__lang-link_active:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -2px;
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: var(--white);
+    box-shadow: 0 2px 0 0 var(--white);
 }
