--- a/assets/styles/blocks/places/places.css
+++ b/assets/styles/blocks/places/places.css
@@ -2,19 +2,17 @@
 
 .places {
     padding-top: 64px;
+    padding-bottom: 64px;
 }
 
 @media (min-width: 768px) {
     .places {
-        padding-top: 88px;
-        padding-left: 24px;
-        padding-right: 24px;
+        padding: 90px 24px;
     }
 }
 
 @media (min-width: 1024px) {
     .places {
-        padding-top: 92px;
         padding-left: 48px;
         padding-right: 48px;
     }
