--- a/assets/styles/blocks/content/__places/content__places.css
+++ b/assets/styles/blocks/content/__places/content__places.css
@@ -1,5 +1,21 @@
-@media (min-width: 1280px) {
+@media (min-width: 768px) {
     .content__places {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .places {
+        padding-left: 48px;
+        padding-right: 48px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .places {
         max-width: 984px;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
