--- a/assets/styles/blocks/cover/__background/cover__background.css
+++ b/assets/styles/blocks/cover/__background/cover__background.css
@@ -1,6 +1,6 @@
 .cover__background {
-    padding-top: 33px;
-    padding-bottom: 33px;
+    padding-top: 10%;
+    padding-bottom: 10%;
     background-image: image-set(
             url("../../../../images/cover-trains.webp") 1x,
             url("../../../../images/cover-trains@2x.webp") 2x,
@@ -24,18 +24,14 @@
 
 @media (min-width: 768px) {
     .cover__background {
-        padding: 115px 105px;
+        padding-top: 15%;
+        padding-bottom: 15%;
     }
 }
 
 @media (min-width: 1024px) {
     .cover__background {
-        padding: 195px 232px;
-    }
-}
-
-@media (min-width: 1280px) {
-    .cover__background {
-        padding: 245px 312px;
+        padding-top: 20%;
+        padding-bottom: 20%;
     }
 }
