--- a/assets/styles/blocks/cover/__title/cover__title.css
+++ b/assets/styles/blocks/cover/__title/cover__title.css
@@ -10,6 +10,7 @@
 @media (min-width: 768px) {
     .cover__title {
         margin-bottom: 32px;
+        max-width: 560px;
         font-size: 72px;
         line-height: 76px;
     }
