--- a/assets/styles/blocks/header/__lang-menu/header__lang-menu.css
+++ b/assets/styles/blocks/header/__lang-menu/header__lang-menu.css
@@ -1,13 +1,15 @@
-.header__list {
+.header__lang-menu {
+    margin: 0;
     padding-top: 12px;
     display: flex;
     align-items: center;
     column-gap: 18px;
     min-width: 50px;
+    list-style: none;
 }
 
 @media (min-width: 768px) {
-    .header__list {
+    .header__lang-menu {
         padding-top: 0;
     }
 }
