--- a/assets/styles/blocks/header/header.css
+++ b/assets/styles/blocks/header/header.css
@@ -1,7 +1,7 @@
 @import "__logo/header__logo.css";
 @import "__lang-link/header__lang-link.css";
 @import "__lang-link/_active/header__lang-link_active.css";
-@import "__list/header__list.css";
+@import "__lang-menu/header__lang-menu.css";
 
 
 .header {
