--- a/assets/styles/blocks/lead/__bg-image/lead__bg-image.css
+++ b/assets/styles/blocks/lead/__bg-image/lead__bg-image.css
@@ -6,9 +6,9 @@
 .lead__bg-image:before {
     content: '';
     position: absolute;
-    top: -25%;
-    left: 12px;
-    right: 12px;
+    top: -28%;
+    left: 2%;
+    right: 2%;
     bottom: 0;
     display: block;
     background-image: url("../../../../images/lead-map.svg");
