--- a/assets/styles/blocks/places/places.css
+++ b/assets/styles/blocks/places/places.css
@@ -7,20 +7,7 @@
 
 @media (min-width: 768px) {
     .places {
-        padding: 90px 24px;
-    }
-}
-
-@media (min-width: 1024px) {
-    .places {
-        padding-left: 48px;
-        padding-right: 48px;
-    }
-}
-
-@media (min-width: 1280px) {
-    .places {
-        padding-left: 0;
-        padding-right: 0;
+        padding-top: 88px;
+        padding-bottom: 88px;
     }
 }
