--- a/assets/styles/blocks/footer/footer.css
+++ b/assets/styles/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 @import "__inner/footer__inner.css";
-@import "__list/footer__list.css";
+@import "__links/footer__links.css";
 @import "__link/footer__link.css";
 @import "__copyright/footer__copyright.css";
 
