--- a/assets/styles/blocks/places/__list/places__list.css
+++ b/assets/styles/blocks/places/__list/places__list.css
@@ -9,6 +9,19 @@
 
 @media (min-width: 768px) {
     .places__list {
+        grid-template-columns: minmax(100%, 720px);
         row-gap: 73px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .places__list {
+        grid-template-columns: minmax(100%, 928px);
+    }
+}
+
+@media (min-width: 1280px) {
+    .places__list {
+        grid-template-columns: minmax(100%, 984px);
     }
 }
