--- a/assets/styles/blocks/content/__places/content__places.css
+++ b/assets/styles/blocks/content/__places/content__places.css
@@ -6,14 +6,14 @@
 }
 
 @media (min-width: 1024px) {
-    .places {
+    .content__places {
         padding-left: 48px;
         padding-right: 48px;
     }
 }
 
 @media (min-width: 1280px) {
-    .places {
+    .content__places {
         max-width: 984px;
         padding-left: 0;
         padding-right: 0;
