--- a/assets/styles/blocks/lead/__bg-image/lead__bg-image.css
+++ b/assets/styles/blocks/lead/__bg-image/lead__bg-image.css
@@ -6,14 +6,14 @@
 .lead__bg-image:before {
     content: '';
     position: absolute;
-    top: -28%;
+    top: 0;
     left: 2%;
     right: 2%;
-    bottom: 0;
     display: block;
+    width: calc(100% - 4%);
+    height: 100%;
     background-image: url("../../../../images/lead-map.svg");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 25%;
     background-size: contain;
-    z-index: 10;
 }
