--- a/assets/styles/blocks/footer/footer.css
+++ b/assets/styles/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-@import "__inner/footer__inner.css";
+@import "__flex-wrapper/footer__flex-wrapper.css";
 @import "__links/footer__links.css";
 @import "__link/footer__link.css";
 @import "__copyright/footer__copyright.css";
