--- a/assets/styles/blocks/footer/__flex-wrapper/footer__flex-wrapper.css
+++ b/assets/styles/blocks/footer/__flex-wrapper/footer__flex-wrapper.css
@@ -1,11 +1,11 @@
-.footer__inner {
+.footer__flex-wrapper {
     display: flex;
     flex-direction: column;
     row-gap: 48px;
 }
 
 @media (min-width: 768px) {
-    .footer__inner {
+    .footer__flex-wrapper {
         flex-direction: row;
         justify-content: space-between;
     }
