--- a/assets/styles/blocks/font/font.css
+++ b/assets/styles/blocks/font/font.css
@@ -4,8 +4,8 @@
     font-weight: normal;
     font-display: swap;
     src:
-            url("../../../fonts/Inter-Regular.woff2");
-url("../../../fonts/Inter-Regular.ttf");
+            url("../../../fonts/Inter-Regular.woff2") format("woff2");
+            url("../../../fonts/Inter-Regular.ttf");
 }
 
 @font-face {
@@ -14,8 +14,8 @@ url("../../../fonts/Inter-Regular.ttf");
     font-weight: bold;
     font-display: swap;
     src:
-            url("../../../fonts/Inter-Bold.woff2");
-url("../../../fonts/Inter-Bold.ttf");
+            url("../../../fonts/Inter-Bold.woff2") format("woff2");
+            url("../../../fonts/Inter-Bold.ttf");
 }
 
 @font-face {
@@ -24,8 +24,8 @@ url("../../../fonts/Inter-Bold.ttf");
     font-weight: 900;
     font-display: swap;
     src:
-            url("../../../fonts/Inter-ExtraBold.woff2");
-url("../../../fonts/Inter-ExtraBold.ttf");
+            url("../../../fonts/Inter-ExtraBold.woff2") format("woff2");
+            url("../../../fonts/Inter-ExtraBold.ttf");
 }
 
 .font {
